manifests/ingress-approach/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: 532174505112.dkr.ecr.ap-south-1.amazonaws.com/test-eks-ecr:latest
          ports:
            - containerPort: 5000
