manifests/ingress-approach/svc.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo-app
  ports:
    - port: 80          
      targetPort: 5000    
  type: ClusterIP
